# vibe-studio

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml  start.sh
react/: package.json
react/src/: App.tsx  api.ts  index.css  main.tsx  store.ts  types.ts
react/src/api/: auth.ts  models.ts
react/src/assets/fonts/: README.md
react/src/assets/styles/: font.css
react/src/components/: ChatPanel.tsx  Sidebar.tsx
react/src/hooks/: useMobile.ts
react/src/router/: index.tsx  routes.ts
react/src/styles/: Frame21.css  Frame2177.css  Frame2342.css  Frame2545.css  Frame2599.css
react/src/views/: Dashboard.tsx  Frame21.tsx  Frame2177.tsx  Frame2342.tsx  Frame2545.tsx  Frame2599.tsx  Login.tsx  Models.tsx  Onboarding.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx  VibeChat.tsx
scripts/: archive-live-drift.sh  bootstrap-macos.sh  install-launchd.sh  install-macos.sh  pre-push-check.sh  setup.sh  sync-live.sh  uninstall-launchd.sh
vibe_studio/: __main__.py  auth.py  config.py  conversation.py  oauth_openai.py  server.py
vibe_studio/agent/: loop.py  providers.py  tools.py
vibe_studio/api/: auth.py  models.py  router.py  ws.py
vibe_studio/database/: __init__.py  models.py
