[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-studio"
version = "0.2.0"
description = "AI Coding Studio - Visual interface for vibe coding with any LLM"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]

[project.scripts]
vibe-studio = "vibe_studio.__main__:main"

[tool.hatch.build.targets.wheel]
include = [
    "vibe_studio/*.py",
    "vibe_studio/**/*.py",
    "vibe_studio/dist/**/*",
]
exclude = [
    "vibe_studio/data/**/*",
    "vibe_studio/**/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
    "vibe_studio/",
    "README.md",
    "LICENSE",
]
